data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2092.wast
;; Design a deeply nested block with multiple `loop` instructions and `br_if` conditions, analyzing whether label indexing and stack state are maintained correctly to avoid premature or infinite loop execution.

(assert_invalid
  (module (func
    (block (result i32)
      (loop (result i32)
        (block (result i32)
          (i32.const 1)
          (br_if 1 (i32.const 0))
          (loop (result i32)
            (block (result i32)
              (i32.const 1)
              (br_if 2 (i32.const 0))
              (br 1)
            )
            (i32.const 0)
            (br 0)
          )
        )
        (i32.const 0)
      )
      (i32.const 0)
      (block (result i32)
        (i32.wrap_i64 (i64.const 0)) 
      )
    )
  ))
  "type mismatch"
)